--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,6 +8,27 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
           integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+
+
+      <link rel="apple-touch-icon" sizes="57x57" href="http://www.mpglobalproducts.com/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="http://www.mpglobalproducts.com/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="http://www.mpglobalproducts.com/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="http://www.mpglobalproducts.com/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="http://www.mpglobalproducts.com/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="http://www.mpglobalproducts.com/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="http://www.mpglobalproducts.com/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="http://www.mpglobalproducts.com/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="http://www.mpglobalproducts.com/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="http://www.mpglobalproducts.com/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="http://www.mpglobalproducts.com/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="http://www.mpglobalproducts.com/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="http://www.mpglobalproducts.com/favicon/favicon-16x16.png">
+    <link rel="manifest" href="http://www.mpglobalproducts.com/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="http://www.mpglobalproducts.com/favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+
+
   </head>
   <body>
     {{{body}}}
