--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,8 +3,8 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{{title}}</title>
-    <meta name="description" content="This is a test website" />
+    <title>Mold Inspection and Removal in Norfolk Nebraska</title>
+    <meta name="description" content="Mold Inspection and Removal in Norfolk Nebraska" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
           integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
