--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,4 @@
 <h1>Mold Inspection and Removal in Norfolk Nebraska</h1>
-<p>Welcome to {{title}}</p>
 <p>Mold Inspection and Removal in Norfolk Nebraska. Mold Inspection and Removal in Norfolk Nebraska. Mold Inspection and Removal in Norfolk Nebraska. Mold Inspection and Removal in Norfolk Nebraska. Mold Inspection and Removal in Norfolk Nebraska.</p>
 <h2>Mold Inspection and Removal in Norfolk Nebraska</h2>
 <p>Mold Inspection and Removal in Norfolk Nebraska. Mold Inspection and Removal in Norfolk Nebraska. Mold Inspection and Removal in Norfolk Nebraska. Mold Inspection and Removal in Norfolk Nebraska. Mold Inspection and Removal in Norfolk Nebraska.</p>
@@ -11,7 +10,6 @@
 <p>Mold Inspection and Removal in Norfolk Nebraska. Mold Inspection and Removal in Norfolk Nebraska. Mold Inspection and Removal in Norfolk Nebraska. Mold Inspection and Removal in Norfolk Nebraska. Mold Inspection and Removal in Norfolk Nebraska.</p>
 <p>Mold Inspection and Removal in Norfolk Nebraska. Mold Inspection and Removal in Norfolk Nebraska. Mold Inspection and Removal in Norfolk Nebraska. Mold Inspection and Removal in Norfolk Nebraska. Mold Inspection and Removal in Norfolk Nebraska.</p>
 <h4>Mold Inspection and Removal in Norfolk Nebraska</h4>
-<p>Mold Inspection and Removal in Norfolk Nebraska. Mold Inspection and Removal in Norfolk Nebraska. Mold Inspection and Removal in Norfolk Nebraska. Mold Inspection and Removal in Norfolk Nebraska. Mold Inspection and Removal in Norfolk Nebraska.</p>
-<p>Mold Inspection and Removal in Norfolk Nebraska. Mold Inspection and Removal in Norfolk Nebraska. Mold Inspection and Removal in Norfolk Nebraska. Mold Inspection and Removal in Norfolk Nebraska. Mold Inspection and Removal in Norfolk Nebraska.</p>
-<p>Mold Inspection and Removal in Norfolk Nebraska. Mold Inspection and Removal in Norfolk Nebraska. Mold Inspection and Removal in Norfolk Nebraska. Mold Inspection and Removal in Norfolk Nebraska. Mold Inspection and Removal in Norfolk Nebraska.</p>
-<p>Mold Inspection and Removal in Norfolk Nebraska. Mold Inspection and Removal in Norfolk Nebraska. Mold Inspection and Removal in Norfolk Nebraska. Mold Inspection and Removal in Norfolk Nebraska. Mold Inspection and Removal in Norfolk Nebraska.</p>
+<p>Living and/or working in an environment with elevated levels of indoor mold growth has been shown to cause serious health issues. If you suspect mold in your home, you might require a professional mold remediation company. FloorTec Restoration serves the Mitchell and Yankton, SD areas, as well as Norfolk and Northeast Nebraska. We have the experience and equipment necessary to handle mold removal properly and safely. The use of professional mold testing services helps to avoid lingering issues and keep mold from coming back with a vengeance. If mold is already present in your home, waiting to take care of the problem is the worst thing that you can do.</p>
+<h3>The Mold Remediation Process</h3>
+<p>Every mold damage scenario is different, and requires a unique solution; however, the general mold remediation process stays the same. The steps listed below illustrate our "typical" mold removal process:</p>
