--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mold Inspection and Removal in Norfolk Nebraska</title>
     <meta name="description" content="Mold Inspection and Removal in Norfolk Nebraska. Mold Inspection and Removal in Norfolk Nebraska." />
+    <link rel="canonical" href="http://www.mpglobalproducts.com/" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
           integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
@@ -28,5 +29,16 @@
   </head>
   <body>
     {{{body}}}
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-86814932-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
   </body>
 </html>
