--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,9 @@
 <h1>Mold Inspection and Removal in Norfolk Nebraska</h1>
+<ul>
+	      <li><a href="https://www.instagram.com/scottdeboer88/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i> Instagram</a></li>
+                        <li><a href="https://www.facebook.com/scott.deboer.79" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i> Facebook</a></li>
+                        <li><a href="https://twitter.com/ScottDeBoer5" target="_blank"><i class="fa fa-twitter-square" aria-hidden="true"></i> Twitter</a></li>
+</ul>
 <p>Mold Inspection and Removal in Norfolk Nebraska. Mold Inspection and Removal in Norfolk Nebraska. Mold Inspection and Removal in Norfolk Nebraska. Mold Inspection and Removal in Norfolk Nebraska. Mold Inspection and Removal in Norfolk Nebraska.</p>
 <h2>Mold Inspection and Removal in Norfolk Nebraska</h2>
 <h3>Mold Inspection and Removal in Norfolk Nebraska</h3>
