--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,12 +1,11 @@
 <h1>Mold Inspection and Removal in Norfolk Nebraska</h1>
 <ul>
-	      <li><a href="https://www.instagram.com/scottdeboer88/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i> Instagram</a></li>
-                        <li><a href="https://www.facebook.com/scott.deboer.79" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i> Facebook</a></li>
-                        <li><a href="https://twitter.com/ScottDeBoer5" target="_blank"><i class="fa fa-twitter-square" aria-hidden="true"></i> Twitter</a></li>
+	      <li><a target="_blank" href="https://www.facebook.com/quietwalkpad" title="Facebook Profile - MP Global Products"><img src="/_images/facebook-icon.png" alt="Facebook Profile - MP Global Products"></a></li>
+            <li><a target="_blank" href="https://www.linkedin.com/company/mp-global-products-llc" title="LinkedIn Profile - MP Global Products"><img src="/_images/linkedin-icon.png" alt="LinkedIn Profile - MP Global Products"></a></li>
+            <li><a target="_blank" href="https://www.pinterest.com/quietwalk/" title="Pinterest Profile - MP Global Products"><img src="/_images/pinterest-icon.png" alt="Pinterest Profile - MP Global Products"></a></li>
+            <li><a target="_blank" href="https://twitter.com/quietwalkpad" title="Twitter Profile - MP Global Products"><img src="/_images/twitter-icon.png" alt="Twitter Profile - MP Global Products"></a></li>
+            <li><a target="_blank" href="https://www.youtube.com/user/mpglobal10?feature=mhee" title="YouTube Profile - MP Global Products"><img src="/_images/youtube-icon.png" alt="YouTube Profile - MP Global Products"></a></li>
 </ul>
-<p>  <a href="https://www.instagram.com/scottdeboer88/" target="_blank">Instagram</a><br/>
-                                <a href="https://www.facebook.com/scott.deboer.79" target="_blank">Facebook</a><br/>
-                                <a href="https://twitter.com/ScottDeBoer5" target="_blank">Twitter</a></p>
 <p>Mold Inspection and Removal in Norfolk Nebraska. Mold Inspection and Removal in Norfolk Nebraska. Mold Inspection and Removal in Norfolk Nebraska. Mold Inspection and Removal in Norfolk Nebraska. Mold Inspection and Removal in Norfolk Nebraska.</p>
 <h2>Mold Inspection and Removal in Norfolk Nebraska</h2>
 <h3>Mold Inspection and Removal in Norfolk Nebraska</h3>
