--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,12 +1,12 @@
 <h1>Mold Inspection and Removal in Norfolk Nebraska</h1>
-<ul>
-	      <li style="margin-bottom:20px;"><a class="btn btn-primary btn-block" target="_blank" href="https://www.facebook.com/quietwalkpad" title="Facebook Profile - MP Global Products"><img src="/_images/facebook-icon.png" alt="Facebook Profile - MP Global Products"></a></li>
-            <li style="margin-bottom:20px;"><a class="btn btn-primary btn-block" target="_blank" href="https://www.linkedin.com/company/mp-global-products-llc" title="LinkedIn Profile - MP Global Products"><img src="/_images/linkedin-icon.png" alt="LinkedIn Profile - MP Global Products"></a></li>
-            <li style="margin-bottom:20px;"><a class="btn btn-primary btn-block" target="_blank" href="https://www.pinterest.com/quietwalk/" title="Pinterest Profile - MP Global Products"><img src="/_images/pinterest-icon.png" alt="Pinterest Profile - MP Global Products"></a></li>
-            <li style="margin-bottom:20px;"><a class="btn btn-primary btn-block" target="_blank" href="https://twitter.com/quietwalkpad" title="Twitter Profile - MP Global Products"><img src="/_images/twitter-icon.png" alt="Twitter Profile - MP Global Products"></a></li>
-            <li style="margin-bottom:20px;"><a class="btn btn-primary btn-block" target="_blank" href="https://www.youtube.com/user/mpglobal10?feature=mhee" title="YouTube Profile - MP Global Products"><img src="/_images/youtube-icon.png" alt="YouTube Profile - MP Global Products"></a></li>
-            <li style="margin-bottom:20px;"><a class="btn btn-primary btn-block" href="https://www.instagram.com/scottdeboer88/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i> Instagram</a></li>
-            <li style="margin-bottom:20px;"><a class="btn btn-primary btn-block" href="https://plus.google.com/u/1/102805220083064928028">Google Profile</a></li>
+<ul id="soc">
+	      <li><a class="btn btn-primary btn-block" target="_blank" href="https://www.facebook.com/quietwalkpad" title="Facebook Profile - MP Global Products"><img src="/_images/facebook-icon.png" alt="Facebook Profile - MP Global Products"></a></li>
+            <li><a class="btn btn-primary btn-block" target="_blank" href="https://www.linkedin.com/company/mp-global-products-llc" title="LinkedIn Profile - MP Global Products"><img src="/_images/linkedin-icon.png" alt="LinkedIn Profile - MP Global Products"></a></li>
+            <li><a class="btn btn-primary btn-block" target="_blank" href="https://www.pinterest.com/quietwalk/" title="Pinterest Profile - MP Global Products"><img src="/_images/pinterest-icon.png" alt="Pinterest Profile - MP Global Products"></a></li>
+            <li><a class="btn btn-primary btn-block" target="_blank" href="https://twitter.com/quietwalkpad" title="Twitter Profile - MP Global Products"><img src="/_images/twitter-icon.png" alt="Twitter Profile - MP Global Products"></a></li>
+            <li><a class="btn btn-primary btn-block" target="_blank" href="https://www.youtube.com/user/mpglobal10?feature=mhee" title="YouTube Profile - MP Global Products"><img src="/_images/youtube-icon.png" alt="YouTube Profile - MP Global Products"></a></li>
+            <li><a class="btn btn-primary btn-block" href="https://www.instagram.com/scottdeboer88/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i> Instagram</a></li>
+            <li><a class="btn btn-primary btn-block" href="https://plus.google.com/u/1/102805220083064928028">Google Profile</a></li>
 </ul>
 <p>Mold Inspection and Removal in Norfolk Nebraska. Mold Inspection and Removal in Norfolk Nebraska. Mold Inspection and Removal in Norfolk Nebraska. Mold Inspection and Removal in Norfolk Nebraska. Mold Inspection and Removal in Norfolk Nebraska.</p>
 <h2>Mold Inspection and Removal in Norfolk Nebraska</h2>
