--- a/views/index.hbs
+++ b/views/index.hbs
@@ -23,3 +23,6 @@
 <p>Every mold damage scenario is different, and requires a unique solution; however, the general mold remediation process stays the same. The steps listed below illustrate our "typical" mold removal process:</p>
 <h4>Mold Inspection and Removal in Norfolk Nebraska</h4>
 <h5>Mold Inspection and Removal in Norfolk Nebraska</h5>
+<div class="social">
+						<div class='shareaholic-canvas' data-app='share_buttons' data-app-id='14881357'></div>
+					</div>
