--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -29,11 +29,37 @@
   }
 }
 </script>
+<style>body{background:#eee;padding:20px 0px;}.container{background:#fff;}header .container{padding-top:20px;}</style>
 
 
   </head>
   <body>
-    {{{body}}}
+
+  		<header>
+  			<div class="container">
+  				
+	  			<div class="col-md-3">Logo</div>
+	  			<div class="col-md-9 text-right"><p>Call Today for services, call <a href="teL:">800-800-8000</a></p></div>
+  			</div>
+  		</header>
+  		<article>
+  			<div class="container">
+  				
+	  			<div class="col-md-8"><h1>Mold Inspection and Removal in Norfolk Nebraska</h1></div>
+	  			<div class="col-md-4">
+	  				<form>
+	  					<input class="form-control" type="" name="">
+	  				</form>
+	  			</div>
+	  			<div class="clearfix"></div>
+	  			<div class="col-md-12">
+				    {{{body}}}
+	  			</div>
+
+  			</div>
+  		</article>
+  		
+  	
     <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
