--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -48,7 +48,7 @@
 	  			<div class="col-md-8"><h1>Mold Inspection and Removal in Norfolk Nebraska</h1></div>
 	  			<div class="col-md-4">
 	  				<form>
-	  					<input class="form-control" type="" name="">
+	  					<input class="form-control" type="input" name="name">
 	  				</form>
 	  			</div>
 	  			<div class="clearfix"></div>
